--- a/Synth.csproj
+++ b/Synth.csproj
@@ -5,6 +5,6 @@
         <LangVersion>7.3</LangVersion>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="MathNet.Numerics" Version="4.8.1" />
+      <PackageReference Include="managed-midi" Version="1.9.7" />
     </ItemGroup>
 </Project>
